--- a/start.html
+++ b/start.html
@@ -18,8 +18,10 @@
         <script src="boss.js"></script>
         <script src="game.js"></script>
         <script src="gui.js"></script>
+        <script src="bullet.js"></script>
 
         <img src="./images/warrior.png" alt="warrior" id="warrior"/>
+        <img src="./images/warriorShot.png" alt="warriorBullet" id="warriorBullet"/>
         <img src="./images/zombie.png" alt="zombie" id="zombie"/>
         <img src="./images/boss.png" alt="boss" id="boss"/>
         <img src="./images/heart.png" alt="heart" id="heart"/>
