--- a/start.html
+++ b/start.html
@@ -11,6 +11,14 @@
         <canvas id="canvas"></canvas>
 
         <p id="timer"></p>
+
+        <audio autoplay loop id="backgroundMusic"> 
+            <source src="./audio/music/backgroundMusic.mp3" type="audio/mpeg"> 
+            Dein Browser unterstützt die Audiodatei leider nicht.
+        </audio>
+        <audio id="punchWarrior">
+            <source src="./audio/soundFiles/punchWarrior.mp3" type="audio/mpeg"> 
+        </audio>
         
         <script src="warrior.js"></script>
         <script src="enemy.js"></script>
@@ -20,6 +28,8 @@
         <script src="gui.js"></script>
         <script src="bullet.js"></script>
 
+        <audio loop autoplay> <source src="./audio/music/backgroundMusic.mp3" type="audio/mpeg"> </audio>
+
         <img src="./images/warrior.png" alt="warrior" id="warrior"/>
         <img src="./images/warriorShot.png" alt="warriorBullet" id="warriorBullet"/>
         <img src="./images/zombie.png" alt="zombie" id="zombie"/>
@@ -28,5 +38,15 @@
         <img src="./images/heartDamage.png" alt="heartDamage" id="heartDamage"/>
         <img src="./images/settings.png" alt="settings" id="settings" onclick="window.open('settings.html', '_self')"/>
         <img src="./images/gamerules.png" alt="gamerules" id="gamerules" onclick="window.open('gamerules.html', '_self')"/>
+
+        <script>
+            // Lade Einstellungen aus localStorage und wende sie an
+            console.log("game yes");
+            var textSize = localStorage.getItem("textSize");
+            if (textSize) {
+              document.querySelector(':root').style.setProperty('--fontsize', textSize + "px");
+              document.querySelector(':root').style.setProperty('--fontHeadline', (textSize * 1.6) + "px");
+            }
+          </script>
     </body>
 </html>
