--- a/gamerules.html
+++ b/gamerules.html
@@ -4,15 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
         <title>Gamerules</title>
-        <link rel="stylesheet" href="game.css">
+        <link rel="stylesheet" href="gamerules.css">
     </head>
 
     <body id="body">
         <img src="./images/back.png" alt="backToGame" id="backToGame" onclick="window.open('start.html', '_self');"/>
 
-        <h1 id="headline">Gamerules - How does this game work?</h1>
+        <h1>Gamerules - How does this game work?</h1>
 
-        <p>Text, Text, Text, Text</p>
-        <p>[...]</p>
+        <p class="text">Text, Text, Text, Text</p>
+        <p class="text">[...]</p>
+
+        <script src="settingUpdate.js"></script>
     </body>
 </html>
