--- a/start.html
+++ b/start.html
@@ -16,9 +16,7 @@
             <source src="./audio/music/backgroundMusic.mp3" type="audio/mpeg"> 
             Dein Browser unterstützt die Audiodatei leider nicht.
         </audio>
-        <audio id="punchWarrior">
-            <source src="./audio/soundFiles/punchWarrior.mp3" type="audio/mpeg"> 
-        </audio>
+        <audio id="punchWarrior"> <source src="./audio/soundFiles/punchWarrior.mp3" type="audio/mpeg"> </audio>
         
         <script src="warrior.js"></script>
         <script src="enemy.js"></script>
@@ -26,10 +24,7 @@
         <script src="boss.js"></script>
         <script src="game.js"></script>
         <script src="gui.js"></script>
-        <script src="bullet.js"></script>
-        
-
-        <audio loop autoplay> <source src="./audio/music/backgroundMusic.mp3" type="audio/mpeg"> </audio>
+        <script src="settingUpdate.js"></script>
 
         <img src="./images/warrior.png" alt="warrior" id="warrior"/>
         <img src="./images/warriorShot.png" alt="warriorBullet" id="warriorBullet"/>
@@ -39,17 +34,5 @@
         <img src="./images/heartDamage.png" alt="heartDamage" id="heartDamage"/>
         <img src="./images/settings.png" alt="settings" id="settings" onclick="window.open('settings.html', '_self')"/>
         <img src="./images/gamerules.png" alt="gamerules" id="gamerules" onclick="window.open('gamerules.html', '_self')"/>
-
-        <!-- <script>
-            //FontSize auf der Seite anpassen
-            var textSize = localStorage.getItem("fontSize");
-            console.log(textSize);
-            if (textSize) {
-              document.querySelector(':root').style.setProperty('--fontsize', textSize + "px");
-              document.querySelector(':root').style.setProperty('--fontHeadline', (textSize * 1.6) + "px");
-            }
-          </script> -->
-
-          <script scr="settingUpdate.js"></script>
     </body>
 </html>
