--- a/settings.html
+++ b/settings.html
@@ -144,7 +144,7 @@
                                     <label for="up">Hoch:</label>
                                 </div>
                                 <div class="input">
-                                    <input type="text" id="up" name="up" value="w" onfocus="this. value=''" oninput="updateKeySettings('up')" maxlength="1">
+                                    <input type="text" id="up" name="up" value="w" onfocus="this.value=''" oninput="updateKeySettings('up')" maxlength="1">
                                 </div>
                             </div>
 
@@ -153,7 +153,7 @@
                                     <label for="down">Runter:</label>
                                 </div>
                                 <div class="input">
-                                    <input type="text" id="down" name="down" value="s" onfocus="this. value=''" oninput="updateKeySettings('down')" maxlength="1">
+                                    <input type="text" id="down" name="down" value="s" onfocus="this.value=''" oninput="updateKeySettings('down')" maxlength="1">
                                 </div>
                             </div>
 
@@ -162,7 +162,7 @@
                                     <label for="right">Rechts:</label>
                                 </div>
                                 <div class="input">
-                                    <input type="text" id="right" name="right" value="d" onfocus="this. value=''" oninput="updateKeySettings('right')" maxlength="1">
+                                    <input type="text" id="right" name="right" value="d" onfocus="this.value=''" oninput="updateKeySettings('right')" maxlength="1">
                                 </div>
                             </div>
 
@@ -171,7 +171,7 @@
                                     <label for="left">Links:</label>
                                 </div>
                                 <div class="input">
-                                    <input type="text" id="left" name="left" value="a" onfocus="this. value=''" oninput="updateKeySettings('left')" maxlength="1">
+                                    <input type="text" id="left" name="left" value="a" onfocus="this.value=''" oninput="updateKeySettings('left')" maxlength="1">
                                 </div>
                             </div>
                         </fieldset>
@@ -186,7 +186,7 @@
                                     <label for="upShot">Nach oben schießen:</label>
                                 </div>
                                 <div class="input">
-                                    <input type="text" id="upShot" name="upShot" value="ArrowUp" onfocus="this. value=''" oninput="updateKeySettings('upShot')" maxlength="1">
+                                    <input type="text" id="upShot" name="upShot" value="ArrowUp" onfocus="this.value=''" oninput="updateKeySettings('upShot')" maxlength="1">
                                 </div>
                             </div>
 
@@ -195,7 +195,7 @@
                                     <label for="downShot">Nach unten schießen:</label>
                                 </div>
                                 <div class="input">
-                                    <input type="text" id="downShot" name="downShot" value="ArrowDown" onfocus="this. value=''" oninput="updateKeySettings('downShot')" maxlength="1">
+                                    <input type="text" id="downShot" name="downShot" value="ArrowDown" onfocus="this.value=''" oninput="updateKeySettings('downShot')" maxlength="1">
                                 </div>
                             </div>
 
@@ -204,7 +204,7 @@
                                     <label for="rightShot">Nach rechts schießen:</label>
                                 </div>
                                 <div class="input">
-                                    <input type="text" id="rightShot" name="rightShot" value="ArrowRight" onfocus="this. value=''" oninput="updateKeySettings('rightShot')" maxlength="1">
+                                    <input type="text" id="rightShot" name="rightShot" value="ArrowRight" onfocus="this.value=''" oninput="updateKeySettings('rightShot')" maxlength="1">
                                 </div>
                             </div>
 
@@ -213,7 +213,7 @@
                                     <label for="leftShot">Nach links schießen:</label>
                                 </div>
                                 <div class="input">
-                                    <input type="text" id="leftShot" name="leftShot" value="Arrowleft" onfocus="this. value=''" oninput="updateKeySettings('leftShot')" maxlength="1">
+                                    <input type="text" id="leftShot" name="leftShot" value="ArrowLeft" onfocus="this.value=''" oninput="updateKeySettings('leftShot')" maxlength="1">
                                 </div>
                             </div>
                         </fieldset>
@@ -229,11 +229,18 @@
                 </div>
 
                 <div id="backToGame-settings" class="settings-container">
-                    <h2>Willst du wirklich zurück zum Spiel?</h2>
+                    <h2>Wo möchtest du hin?</h2>
                     <br>
                     <div>
                         <div class="row">
-                            <a href="#" onclick="window.open('start.html', '_self');" class="button">Zurück zum Spiel</a>
+                            <a href="#" onclick="window.open('game.html', '_self');" class="button">Zum Spiel</a>
+                            <br>
+                            <br>
+                            <br>
+                            <a href="#" onclick="window.open('start.html', '_self');" class="button">Zum Startbildbildschirm</a>
+                            <br>
+                            <br>
+                            <br>
                             <a href="#visual" onclick="showSettings('visual')" class="button">In den Einstellungen bleiben</a>
                         </div>
                     </div>
@@ -241,68 +248,6 @@
             </div>
         </div>
 
-        <script>
-            function showSettings(category) {
-              document.querySelectorAll('.settings-container').forEach(container => {
-                container.classList.remove('visible');
-              });
-              document.getElementById(`${category}-settings`).classList.add('visible');
-            }
-
-            // Visuelles
-
-            function updateFontSize() {
-                var textSize = document.getElementById("fontSize").value;
-                localStorage.setItem("fontSize", textSize);
-
-                document.querySelector(':root').style.setProperty('--fontsize', textSize + "px");
-                document.querySelector(':root').style.setProperty('--fontHeadline', (textSize * 1.6) + "px");
-            }
-
-            function updateFontStyle() {
-                var fontStyle = document.getElementById("fontStyle").value;
-                localStorage.setItem("fontSize", fontStyle);
-                document.querySelector(':root').style.setProperty('--fontStyle', fontStyle);
-            }
-
-            function updateVisual() {
-                updateFontSize();
-            }
-
-            //Tastenbelegungen
-
-            function updateKeySettings(element) {
-                var key = document.getElementById(element).value;
-                localStorage.setItem(element, key);
-            }
-
-            function updateValue(element) {
-                var key = localStorage.getItem(element);
-                document.getElementById(element).placeholder = key;
-                document.getElementById(element).value = key;
-                return key;
-            }
-
-            function loadCurrentKeyBindings() {
-                if(localStorage.getItem("up") != null) {
-                    updateValue("up");
-                    updateValue("down");
-                    updateValue("right");
-                    updateValue("left");
-
-                    updateValue("upShot");
-                    updateValue("downShot");
-                    updateValue("rightShot");
-                    updateValue("leftShot");
-                }
-            }
-
-            function resetKeyBindings() {
-                localStorage.clear();
-                loadCurrentKeyBindings();
-            }
-
-            loadCurrentKeyBindings();
-        </script>
+        <script src="settings.js"></script>
     </body>
 </html>
