--- a/start.html
+++ b/start.html
@@ -3,36 +3,33 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
-        <title>Vortexx</title>
-        <link rel="stylesheet" href="game.css">
+        <title>Startbildbildschirm</title>
+        <link rel="stylesheet" href="settings.css">
     </head>
 
     <body id="body">
-        <canvas id="canvas"></canvas>
+        <div class="header">
+            <h1>Willkommen zum Spiel!</h1>
+        </div>
+        <div class="row">
+                <div class="column side">
+                </div>
+            
 
-        <p id="timer"></p>
+            <div class="column middle">
+                <div id="visual-settings" class="settings-container visible"> 
+                    <h2>Wo möchtest du hin?</h2>
+                    <br>
+                    <div class="row">
+                        <a href="game.html" class="button">Zum Spiel</a>
+                        <a href="#" class="button">Zum Tutorial</a>
+                        <a href="settings.html" class="button">Zu den Einstellungen</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        <audio autoplay loop id="backgroundMusic"> 
-            <source src="./audio/music/backgroundMusic.mp3" type="audio/mpeg"> 
-            Dein Browser unterstützt die Audiodatei leider nicht.
-        </audio>
-        <audio id="punchWarrior"> <source src="./audio/soundFiles/punchWarrior.mp3" type="audio/mpeg"> </audio>
         
-        <script src="warrior.js"></script>
-        <script src="enemy.js"></script>
-        <script src="zombie.js"></script>
-        <script src="boss.js"></script>
-        <script src="game.js"></script>
-        <script src="gui.js"></script>
         <script src="settingUpdate.js"></script>
-
-        <img src="./images/warrior.png" alt="warrior" id="warrior"/>
-        <img src="./images/warriorShot.png" alt="warriorBullet" id="warriorBullet"/>
-        <img src="./images/zombie.png" alt="zombie" id="zombie"/>
-        <img src="./images/boss.png" alt="boss" id="boss"/>
-        <img src="./images/heart.png" alt="heart" id="heart"/>
-        <img src="./images/heartDamage.png" alt="heartDamage" id="heartDamage"/>
-        <img src="./images/settings.png" alt="settings" id="settings" onclick="window.open('settings.html', '_self')"/>
-        <img src="./images/gamerules.png" alt="gamerules" id="gamerules" onclick="window.open('gamerules.html', '_self')"/>
     </body>
 </html>
