--- a/game.html
+++ b/game.html
@@ -73,6 +73,12 @@
                 // }
             }
 
+            // var backgroundMusic = document.getElementById("backgroundMusic");
+            // // backgroundMusic.muted = true;
+            // setTimeout(function() {
+            //     backgroundMusic.play();
+            // }, 2000);
+
             loadAudio("backgroundMusic");
             loadAudio("punchWarrior");
             loadAudio("bossShot");
