Audio-Volume_angepasst

--- a/gamerules.html
+++ b/gamerules.html
@@ -8,7 +8,7 @@
     </head>
 
     <body id="body">
-        <img src="./images/back.png" alt="backToGame" id="backToGame" onclick="window.open('start.html', '_self');"/>
+        <img src="./images/back.png" alt="backToGame" id="backToGame" onclick="window.open('index.html', '_self');"/>
 
         <h1>Gamerules - How does this game work?</h1>
 
