--- a/settings.html
+++ b/settings.html
@@ -10,7 +10,7 @@
 
     <body>
         <div class="header">
-            <img src="./images/back.png" alt="backToGame" id="backToGame" onclick="window.open('start.html', '_self');"/>
+            <img src="./images/back.png" alt="backToGame" id="backToGame" onclick="window.open('index.html', '_self');"/>
             <h1>Einstellungen</h1>
         </div>
 
@@ -51,7 +51,7 @@
 
                             <div class="row">
                                 <div class="label">
-                                    <label for="fontStyle">Schriftgröße</label>
+                                    <label for="fontStyle">Schriftart</label>
                                 </div>
                                 <div class="input">
                                     <select id="fontStyle" name="fontStyle" onchange="updateFontStyle()">
@@ -67,7 +67,7 @@
 
                         <br>
 
-                        <fieldset>
+                        <!-- <fieldset>
                             <legend>Kontrast</legend>
 
                             <div class="row">
@@ -78,7 +78,7 @@
                                     <input type="text" id="contrast" name="kontrast" placeholder="Kontrast auswählen">
                                 </div>
                             </div>
-                        </fieldset>
+                        </fieldset> -->
 
                         <br>
 
@@ -137,7 +137,7 @@
                     <h2>Spieleinstellungen</h2>
 
                     <form action="">
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="label">
                                 <label for="fname">Schwierigkeitsgrad</label>
                             </div>
@@ -148,10 +148,9 @@
 
                         <br>
 
-                        <!-- Änderungen speichern -->
                         <div class="row">
                             <input type="submit" value="Änderungen speichern">
-                        </div>
+                        </div> -->
                     </form>
                 </div>
 
@@ -260,7 +259,7 @@
                             <br>
                             <br>
                             <br>
-                            <a href="#" onclick="window.open('start.html', '_self');" class="button">Zum Startbildbildschirm</a>
+                            <a href="#" onclick="window.open('index.html', '_self');" class="button">Zum Startbildbildschirm</a>
                             <br>
                             <br>
                             <br>
