--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <br>
                     <div class="row">
                         <a href="game.html" class="button">Zum Spiel</a>
-                        <a href="#" class="button">Zum Tutorial</a>
+                        <!-- <a href="#" class="button">Zum Tutorial</a> -->
                         <a href="settings.html" class="button">Zu den Einstellungen</a>
                     </div>
                 </div>
