--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
         <title>Settings</title>
-        <link rel="stylesheet" href="game.css">
         <link rel="stylesheet" href="settings.css">
     </head>
 
@@ -16,13 +15,11 @@
 
         <div class="row">
             <div class="column side">
-                <ul>
-                    <li><a href="#visual" onclick="showSettings('visual')">Visuelles</a></li>
-                    <li><a href="#audio" onclick="showSettings('audio')">Audio</a></li>
-                    <li><a href="#gamesettings" onclick="showSettings('gamesettings')">Spieleinstellungen</a></li>
-                    <li><a href="#controls" onclick="showSettings('controls')">Tastenbelegung</a></li>
-                    <li><a href="#backToGame" onclick="showSettings('backToGame')">Zurück zum Spiel</a></li>
-                </ul>
+                <ul> <li><a href="#visual" onclick="showSettings('visual')">Visuelles</a></li> </ul>
+                <ul> <li><a href="#audio" onclick="showSettings('audio')">Audio</a></li> </ul>
+                <ul> <li><a href="#gamesettings" onclick="showSettings('gamesettings')">Spieleinstellungen</a></li> </ul>
+                <ul> <li><a href="#controls" onclick="showSettings('controls')">Tastenbelegung</a></li> </ul>
+                <ul> <li><a href="#backToGame" onclick="showSettings('backToGame')">Zurück zum Spiel</a></li> </ul>
             </div>
             
             <div class="column middle">
