--- a/game.html
+++ b/game.html
@@ -104,7 +104,7 @@
         <img src="./images/zombie.png" alt="zombie" id="zombie"/>
         <img src="./images/boss.png" alt="boss" id="boss"/>
         <img src="./images/heart.png" alt="heart" id="heart"/>
-        <img src="./images/heartDamage.png" alt="heartDamage" id="heartDamage"/>
+        <img src="./images/bossShot.png" alt="heartDamage" id="heartDamage"/>
         <img src="./images/settings.png" alt="settings" id="settings" onclick="window.open('settings.html', '_self')"/>
         <img src="./images/gamerules.png" alt="gamerules" id="gamerules" onclick="window.open('gamerules.html', '_self')"/>
     </body>
